--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button class="btn btn-decimal">.</button>
             <button class="btn btn-equals">=</button>
             <button class="btn btn-operator-add">+</button>
-            <button class="btn btn-clear">C</button>
+            <button class="btn btn-clear">AC</button>
         </div>
     </div>
     <script src="calculator.js"></script>
